[package]
name = "odbc-sys"
version = "0.18.4"
authors = ["Markus Klein"]
license = "MIT"
description = "ODBC ffi bindings"
repository = "https://github.com/pacman82/odbc-sys"
documentation = "https://docs.rs/odbc-sys/"
readme = "README.md"
keywords = ["sql","database","odbc","ffi"]
build = "build.rs"
categories = ["external-ffi-bindings", "database"]

# Links libodbc.so on linux and OS-X with unix-odbc
# Links odbc32.dll on windows
# Links libiodbc.so on OS-X if iodbc feature is activated
links="odbc"

[dependencies]

[features]
default = ["odbc_version_3_80"]
static = []
iodbc = []

odbc_version_3_50 = []
odbc_version_3_80 = ["odbc_version_3_50"]
odbc_version_4 = ["odbc_version_3_80"]

[badges]
travis-ci = { repository = "pacman82/odbc-sys", branch = "master" }
